Fixed modal on mobile screen only.

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -160,6 +160,7 @@
         max-width: 900px;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 20px;
         margin-bottom: 20px;
     }
 
@@ -906,14 +907,9 @@
     .projects-card {
         max-width: 400px;
         flex: 50%;
-        margin-left: 20px;
-        margin-right: 20px;
         background-color: var(--bluer-color);
         border-radius: 0.5em;
-        margin-top: 30px;
-        margin-bottom: 30px;
         height: 400px; 
-        width: 510;
         transition: all .2s ease-in-out;
     }
 
@@ -924,6 +920,8 @@
     .portfolio-item {
         text-decoration: none;
         color: var(--dark-font);
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .projects-pic {
@@ -957,6 +955,21 @@
         margin-top: 0.5rem;
     }
 
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
     /* Section for Modals */
     .modal-bg {
         position: fixed;
@@ -964,34 +977,40 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-color: rgba(0,0,0,0.5);
-        display: flex;
+        /* display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: center; */
         visibility: hidden;
         opacity: 0;
         transition: visibility 0s, opacity 0.5s;
+        /* overflow-y: initial !important; */
     }
 
     .bg-active {
         visibility: visible;
-        opacity: 1;
+        opacity: 1; 
     }
 
-    .modal-dialog{
+    .modal-dialog {
+        position: relative;
         display: inline-block;
         vertical-align: middle;
-        overflow-y: initial !important;
+        /* overflow-y: initial !important; */
     }
 
     .modal-container {
+        max-height: 100%;
+        overflow-y: auto;
         background-color: var(--whiter-color);
         color: var(--dark-font);
-        height: 85vh;
-        width: 85vw;
+        max-width: 800px;
         border-radius: 0.5em;
-        overflow-y: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* overflow-y: auto; */
     }
 
     .close-modal-position {
@@ -1022,6 +1041,8 @@
     }
 
     .modal-information {
+        display: flex;
+        position: relative;
         padding: 40px;
         margin: auto;
     }
@@ -1136,6 +1157,17 @@
         font-weight: bold;
         font-size: 20px;
     }
+
+
+
+
+
+
+
+
+
+
+
 
     /* ====================================================================
                             CONTACT Section (Page 4)
