--- a/css/mobile.css
+++ b/css/mobile.css
@@ -81,6 +81,7 @@ body {
     color: var(--light-font);
     font-family: 'Open Sans', sans-serif;
     font-size: 120%;
+    scroll-behavior: smooth; /* KEEP AN EYE ON THIS!!! */
 }
 
 /* Ensure that the footer always sticks to the bottom of the screen. */
@@ -110,9 +111,9 @@ html {
     .overflowHidden {
         height: 100%;
         overflow: hidden;
-        position: fixed;
         touch-action: none;
         -ms-touch-action: none;
+        position: inherit;
     }
 }
 
@@ -967,21 +968,27 @@ html {
         flex-wrap: wrap; 
         flex-direction: column;
         min-width: fit-content;
+        justify-content: center;
     }
 
+    /* NEED TO UPDATE ACROSS THE BOARD!!! */
     .projects-card {
+        max-width: 400px;
         background-color: var(--bluer-color);
         border-radius: 0.5em;
-        margin-top: 30px;
-        margin-bottom: 30px;
         transition: all .2s ease-in-out;
     }
 
+    /* NEED TO UPDATE ACROSS THE BOARD!!! */
     .portfolio-item {
         text-decoration: none;
         color: var(--dark-font);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
-
+    /**/
     .projects-pic {
         margin-left: 0;
         margin-right: 0;
@@ -1013,6 +1020,16 @@ html {
         margin-top: 0.5rem;
     }
 
+
+
+
+
+
+
+
+
+
+
     /* Section for Modals */
     .modal-bg {
         position: fixed;
@@ -1020,57 +1037,57 @@ html {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-color: rgba(0,0,0,0.5);
         display: flex;
         justify-content: center;
         align-items: center;
         visibility: hidden;
         opacity: 0;
+
+
         transition: visibility 0s, opacity 0.5s;
     }
 
     .bg-active {
+        overflow: initial;
         visibility: visible;
         opacity: 1;
-    }
-
-    .modal-dialog{
-        display: inline-block;
-        vertical-align: middle;
-        overflow-y: initial !important;
-    }
-
-    .modal-container {
-        background-color: var(--whiter-color);
-        color: var(--dark-font);
-        height: 90vh;
-        width: 90vw;
-        border-radius: 0.5em;
         overflow-y: auto;
     }
 
+    .modal-dialog {
+        display: inline-block;
+        vertical-align: middle;
+        overflow-y: initial !important; /* KEEP AN EYE ON THIS!!! */
+    }
+
+    .modal-container {
+        color: var(--dark-font);
+        height: 95vh;
+        width: 90vw;
+        border-radius: 0.5em;
+        /* overflow-y: auto; */ /* KEEP AN EYE ON THIS!!! */
+        overflow-y: initial !important;
+    }
+
     .close-modal-position {
-        width: 50px;
-        height: 50px;
-        background-color: var(--bluer-color);
-        border-radius: 50%;
-        position: fixed;
-        top: 25px; 
-        right: 10px;
+        margin-left: 0;
     }
 
     .modal-close {
+        display: inline-block;
         color: var(--dark-font);
-        position: fixed;
+        position: absolute;
         font-weight: bold;
         cursor: pointer;
-        top: 31px;
-        right: 23px; 
+        top: 25px;
+        right: 27px;
     }
 
     .fa-times {
         color: var(--dark-font);
+        text-shadow: 0 0 10px var(--bluer-color);
     }
 
     .fa-times:hover {
@@ -1080,6 +1097,8 @@ html {
     .modal-information {
         padding: 20px;
         margin: auto;
+        background-color: var(--whiter-color);
+        border-radius: 0.5em;
     }
 
     .modal-content {
@@ -1182,6 +1201,13 @@ html {
         font-weight: bold;
         font-size: 20px;
     }
+
+
+
+
+
+
+
 
     /* ====================================================================
                             CONTACT Section (Page 4)
